@@ -1,3 +1,7 @@
+2008-09-29  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Follow-up to issue #9375: Add DTD to htmlArea RTE iframe document
+
 2008-09-26  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #9386: Acronym plugin encoding problem
